# makeflow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  requirements.dev.txt  versions.json
.github/actions/format/: action.yml
.github/actions/unittest/: action.yml
.github/workflows/: pages.yml  verify_and_publish.yml
.makeflow/: docs_versions.py  usage.py  version_bump.py
docs/source/: conf.py  index.rst
en/latest/: index.html  objects.inv  search.html  searchindex.js
site/_static/: versions.json
site/latest/: genindex.html
src/makeflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_plumbing.py
